# autotools-jupiter

./: .gitignore  Makefile.am  configure.ac
common/: jupcommon.h  print.c
include/: Makefile.am  libjupiter.h
libjup/: jup_print.c
src/: Makefile.am  main.c
